# hallucination-detector

./: .gitignore  AGENTS.md  README.md  demand.md  pyproject.toml
.superpowers/sdd/: progress.md  review-task-1-r2.diff  review-task-1.diff  review-task-2.diff  task-1-brief.md  task-1-report.md  task-10-brief.md  task-11-brief.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-5-brief.md  task-6-brief.md  task-7-brief.md  task-8-brief.md  task-9-brief.md  tasks-4-5-report.md  tasks-7-8-report.md  tasks-9-10-report.md
docs/: kaifa.md
docs/requirements/: 2026-07-22-0110-customer-service-hallucination-detection-prd.md
src/: __init__.py
src/api/: app.py  dependencies.py  security.py
src/application/: detection_service.py  evaluation_service.py  models.py  reporting_service.py  review_service.py  run_service.py  suggestion_service.py
src/detection/: __init__.py  aggregator.py  claim_extractor.py  completeness_checker.py  evidence_judge.py  mock_engine.py  orchestrator.py
src/domain/: enums.py  hashing.py  metrics.py  models.py
src/evaluation/: __init__.py  evaluator.py  type_mapping.py
src/infrastructure/: artifact_store.py  in_process_executor.py  run_registry.py
src/input/: __init__.py  loader.py  validator.py
src/providers/: __init__.py  base.py  budget.py  llm_provider.py
src/reporting/: __init__.py  exporter.py
src/resources/: __init__.py  vendor_hashes.json
src/review/: __init__.py  diff.py  revision_store.py
src/suggestions/: __init__.py  error_analyzer.py  suggestion_generator.py  validator.py
(+52 files in other folders)
