[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaoduo-hallucination-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "pydantic>=2.10,<3.0",
  "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1.0", "mypy>=1.14,<2.0", "build>=1.2,<2.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["*.__pycache__"]

[tool.setuptools.package-data]
"src.api" = ["templates/**/*.html", "static/**/*"]
"src.resources" = ["detectors/*.json", "evaluation/*.json", "vendor_hashes.json"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*", "**/*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
